# sedapps-v2

./: .gitignore
sala-ai-cloud/: .dockerignore  .env.example  ARCHITECTURE.md  COMPONENT_SYSTEM.md  DOCS_INDEX.md  FINAL_SUMMARY.md  README.md  check-services.sh  create-user.sh  debug-502-auth.sh  debug-core-api-crash.sh  debug-register-500.sh  deploy-azure.sh  deploy-firebase.sh  (+22 more)
sala-ai-cloud/services/core-api/: Dockerfile  alembic.ini  pyproject.toml
sala-ai-cloud/services/core-api/alembic/: env.py
sala-ai-cloud/services/core-api/alembic/versions/: 0001_initial.py  0002_credit_tables.py
sala-ai-cloud/services/core-api/app/: astro_site_generator.py  config.py  main.py  schemas.py
sala-ai-cloud/services/core-api/app/api/v1/: articles.py  credits.py  internal.py  jobs.py  preview.py  projects.py  router.py
sala-ai-cloud/services/core-api/app/auth/: jwt.py  password.py
sala-ai-cloud/services/core-api/app/db/: base.py  session.py
sala-ai-cloud/services/core-api/app/models/: __init__.py  ai_token_usage.py  article.py  comment.py  credit.py  deployment.py  form.py  media_asset.py  membership.py  project.py  site_version.py
sala-ai-cloud/services/core-api/app/schemas/: __init__.py  credit.py  project.py
sala-ai-cloud/services/core-api/app/scripts/: seed.py
sala-ai-cloud/services/core-api/app/services/: deploy_client.py  orchestrator_client.py  ovh_client.py
sala-ai-cloud/services/deploy-service/: Dockerfile  pyproject.toml
sala-ai-cloud/services/deploy-service/app/: config.py  main.py
sala-ai-cloud/services/deploy-service/app/api/v1/: router.py
sala-ai-cloud/services/deploy-service/app/services/: build.py  core_client.py  ovh_dns.py  ssl.py  storage.py
sala-ai-cloud/services/deploy-service/app/tasks/: deploy.py
sala-ai-cloud/services/inbox-service/: Dockerfile  README.md  pyproject.toml
sala-ai-cloud/services/inbox-service/app/: config.py  db.py  services.py
sedapps-cloud/services/ai-orchestrator/: Dockerfile  pyproject.toml
sedapps-cloud/services/ai-orchestrator/app/: celery_app.py  config.py  core_client.py  main.py
sedapps-cloud/services/ai-orchestrator/app/agents/: __init__.py  analytics_setup.py  base.py  blog_writer.py  cms_builder.py  copywriter.py  designer.py  form_builder.py  frontend_generator.py  qa.py  seo.py
sedapps-cloud/services/ai-orchestrator/app/api/v1/: _auth.py  agents.py  workflows.py
sedapps-cloud/services/ai-orchestrator/app/llm/: base.py  deepseek.py
sedapps-cloud/services/ai-orchestrator/app/workflows/: article_generation.py  site_generation.py
sedapps-cloud/services/backend/: .env.example  README.md  _generate_pro.py  _test_pro.py  migrate.py  pyproject.toml
sedapps-cloud/services/backend/app/: ai.py  config.py  llm_site_generator.py  main.py  models.py  schemas.py  site_editor.py  utils.py
(+382 files in other folders)
