[project]
name = "core-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "sqlalchemy==2.0.35",
  "psycopg[binary]==3.2.3",
  "alembic==1.13.3",
  "passlib[bcrypt]==1.7.4",
  "pyjwt==2.9.0",
  "python-multipart==0.0.12",
  "httpx==0.27.2",
  "redis==5.1.1",
  "python-slugify==8.0.4",
  "email-validator==2.2.0",
  "ovh>=1.2.0",
  "beautifulsoup4>=4.12.0",
  "python-jose[cryptography]>=3.3.0",
  "stripe>=8.0.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "ruff==0.6.9"]

[tool.ruff]
line-length = 100
target-version = "py311"
