[project]
name = "sedapps-deploy-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "boto3>=1.35.0",
  "ovh>=1.2.0",
  "python-multipart>=0.0.9"
]

[tool.ruff]
line-length = 100
