[project]
name = "ai-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "celery[redis]==5.4.0",
  "redis==5.1.1",
  "httpx==0.27.2",
  "tenacity==9.0.0",
  "python-slugify==8.0.4",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "ruff==0.6.9"]

[tool.ruff]
line-length = 100
target-version = "py311"
