[project]
name = "sedapps-backend"
version = "0.1.0"
description = "SedApps simple monolithic backend (FastAPI + SQLite)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "supabase>=2.4.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
